spasm/src/asm/lexer.cpp
/* Generated by re2c 1.1.1 on Thu Feb  9 17:22:22 2023 */
#line 1 "lexer.re"
#include <iostream>

#include "lexer.hpp"

#include "token.hpp"

namespace SpasmImpl
{
namespace ASM
{
//! Namespace for all lexical analisys classes
namespace Lexer
{

Lexer::Lexer (std::istream & _file, size_t _buffer_size)
: file (&_file), buffer_size (_buffer_size), state (unsigned(-1)),
lineno (0)
{
    buffer = new char[buffer_size];
    cursor = limit = marker = token_start = NULL;
}

Lexer::~Lexer ()
{
    delete [] buffer;
}

bool Lexer::tokenize (TokenStream &ts)
{
#line 43 "lexer.re"
    
    
    
    
    while (1) {
        
        
#line 41 "lexer.cpp"
        {
            char yych;
            if ((limit - cursor) < 7) return true;
            yych = *cursor;
            switch (yych) {
                case 0x00:	goto yy2;
                case '\n':	goto yy6;
                case ' ':	goto yy8;
                case '"':	goto yy11;
                case '#':	goto yy13;
                case '\'':	goto yy15;
                case '-':	goto yy17;
                case '0':	goto yy18;
                case '1':
                case '2':
                case '3':
                case '4':
                case '5':
                case '6':
                case '7':
                case '8':
                case '9':	goto yy20;
                case ':':	goto yy22;
                case 'A':
                case 'B':
                case 'C':
                case 'D':
                case 'E':
                case 'F':
                case 'G':
                case 'H':
                case 'I':
                case 'J':
                case 'K':
                case 'L':
                case 'M':
                case 'N':
                case 'O':
                case 'P':
                case 'Q':
                case 'R':
                case 'S':
                case 'T':
                case 'U':
                case 'V':
                case 'W':
                case 'X':
                case 'Y':
                case 'Z':
                case '_':
                case 'b':
                case 'e':
                case 'f':
                case 'h':
                case 'i':
                case 'k':
                case 'n':
                case 'q':
                case 't':
                case 'u':
                case 'v':
                case 'w':
                case 'x':
                case 'y':
                case 'z':	goto yy24;
                case 'a':	goto yy27;
                case 'c':	goto yy28;
                case 'd':	goto yy29;
                case 'g':	goto yy30;
                case 'j':	goto yy31;
                case 'l':	goto yy32;
                case 'm':	goto yy33;
                case 'o':	goto yy34;
                case 'p':	goto yy35;
                case 'r':	goto yy36;
                case 's':	goto yy37;
                default:	goto yy4;
            }
        yy2:
            ++cursor;
#line 332 "lexer.re"
            {
                ts.push_token (Token (Token::EndInput, lineno));
                
                break;
            }
#line 128 "lexer.cpp"
        yy4:
            ++cursor;
        yy5:
#line 338 "lexer.re"
            {
                return false;
            }
#line 136 "lexer.cpp"
        yy6:
            ++cursor;
#line 325 "lexer.re"
            {
                ++lineno;
                token_start = cursor;
                
                continue;
            }
#line 146 "lexer.cpp"
        yy8:
            ++cursor;
            if (limit <= cursor) return true;
            yych = *cursor;
            switch (yych) {
                case ' ':	goto yy8;
                default:	goto yy10;
            }
        yy10:
#line 309 "lexer.re"
            {
                token_start = cursor;
                
                continue;
            }
#line 162 "lexer.cpp"
        yy11:
            ++cursor;
            if (limit <= cursor) return true;
            yych = *cursor;
            switch (yych) {
                case '"':	goto yy38;
                case '\\':	goto yy40;
                default:	goto yy11;
            }
        yy13:
            ++cursor;
            if (limit <= cursor) return true;
            yych = *cursor;
            switch (yych) {
                case '\n':	goto yy42;
                default:	goto yy13;
            }
        yy15:
            ++cursor;
            if (limit <= cursor) return true;
            yych = *cursor;
            switch (yych) {
                case '\'':	goto yy38;
                case '\\':	goto yy44;
                default:	goto yy15;
            }
        yy17:
            yych = *++cursor;
            switch (yych) {
                case '0':	goto yy46;
                default:	goto yy5;
            }
        yy18:
            yych = *(marker = ++cursor);
            switch (yych) {
                case '0':
                case '1':
                case '2':
                case '3':
                case '4':
                case '5':
                case '6':
                case '7':
                case '8':
                case '9':
                case ':':	goto yy48;
                case 'X':
                case 'x':	goto yy50;
                default:	goto yy19;
            }
        yy19:
#line 62 "lexer.re"
            {
                ts.push_token (Token (Token::Integer, lineno,
                                      token_start, cursor));
                token_start = cursor;
                
                continue;
            }
#line 222 "lexer.cpp"
        yy20:
            marker = ++cursor;
            if ((limit - cursor) < 2) return true;
            yych = *cursor;
            switch (yych) {
                case '.':	goto yy51;
                case '0':
                case '1':
                case '2':
                case '3':
                case '4':
                case '5':
                case '6':
                case '7':
                case '8':
                case '9':	goto yy20;
                case ':':	goto yy22;
                default:	goto yy19;
            }
        yy22:
            ++cursor;
#line 314 "lexer.re"
            {
                token_start = cursor;
                
                continue;
            }
#line 250 "lexer.cpp"
        yy24:
            ++cursor;
            if (limit <= cursor) return true;
            yych = *cursor;
        yy25:
            switch (yych) {
                case '0':
                case '1':
                case '2':
                case '3':
                case '4':
                case '5':
                case '6':
                case '7':
                case '8':
                case '9':
                case 'A':
                case 'B':
                case 'C':
                case 'D':
                case 'E':
                case 'F':
                case 'G':
                case 'H':
                case 'I':
                case 'J':
                case 'K':
                case 'L':
                case 'M':
                case 'N':
                case 'O':
                case 'P':
                case 'Q':
                case 'R':
                case 'S':
                case 'T':
                case 'U':
                case 'V':
                case 'W':
                case 'X':
                case 'Y':
                case 'Z':
                case '_':
                case 'a':
                case 'b':
                case 'c':
                case 'd':
                case 'e':
                case 'f':
                case 'g':
                case 'h':
                case 'i':
                case 'j':
                case 'k':
                case 'l':
                case 'm':
                case 'n':
                case 'o':
                case 'p':
                case 'q':
                case 'r':
                case 's':
                case 't':
                case 'u':
                case 'v':
                case 'w':
                case 'x':
                case 'y':
                case 'z':	goto yy24;
                default:	goto yy26;
            }
        yy26:
#line 294 "lexer.re"
            {
                ts.push_token (Token (Token::Ident, lineno, token_start,
                                      cursor));
                token_start = cursor;
                
                continue;
            }
#line 331 "lexer.cpp"
        yy27:
            yych = *++cursor;
            switch (yych) {
                case '0':	goto yy52;
                case '1':
                case '2':
                case '3':
                case '4':
                case '5':
                case '6':
                case '7':
                case '8':
                case '9':	goto yy54;
                case 'd':	goto yy56;
                case 'r':	goto yy57;
                default:	goto yy25;
            }
        yy28:
            yych = *++cursor;
            switch (yych) {
                case 'a':	goto yy58;
                case 'o':	goto yy59;
                default:	goto yy25;
            }
        yy29:
            yych = *++cursor;
            switch (yych) {
                case 'i':	goto yy60;
                case 'u':	goto yy61;
                default:	goto yy25;
            }
        yy30:
            yych = *++cursor;
            switch (yych) {
                case 'a':	goto yy62;
                default:	goto yy25;
            }
        yy31:
            yych = *++cursor;
            switch (yych) {
                case 'm':	goto yy63;
                default:	goto yy25;
            }
        yy32:
            yych = *++cursor;
            switch (yych) {
                case 'a':	goto yy64;
                case 'e':	goto yy65;
                default:	goto yy25;
            }
        yy33:
            yych = *++cursor;
            switch (yych) {
                case 'a':	goto yy66;
                case 'o':	goto yy67;
                case 'u':	goto yy68;
                default:	goto yy25;
            }
        yy34:
            yych = *++cursor;
            switch (yych) {
                case 'b':	goto yy69;
                default:	goto yy25;
            }
        yy35:
            yych = *++cursor;
            switch (yych) {
                case 'o':	goto yy70;
                case 'r':	goto yy71;
                case 'u':	goto yy72;
                default:	goto yy25;
            }
        yy36:
            yych = *++cursor;
            switch (yych) {
                case '0':	goto yy73;
                case '1':
                case '2':
                case '3':
                case '4':
                case '5':
                case '6':
                case '7':
                case '8':
                case '9':	goto yy75;
                case 'e':	goto yy77;
                default:	goto yy25;
            }
        yy37:
            yych = *++cursor;
            switch (yych) {
                case 't':	goto yy78;
                case 'u':	goto yy79;
                default:	goto yy25;
            }
        yy38:
            ++cursor;
#line 301 "lexer.re"
            {
                ts.push_token (Token (Token::StringValue, lineno, token_start + 1,
                                      cursor - 1));
                token_start = cursor;
                
                continue;
            }
#line 437 "lexer.cpp"
        yy40:
            ++cursor;
            if (limit <= cursor) return true;
            yych = *cursor;
            switch (yych) {
                case '\\':	goto yy40;
                default:	goto yy11;
            }
        yy42:
            ++cursor;
#line 319 "lexer.re"
            {
                ++lineno;
                token_start = cursor;
                
                continue;
            }
#line 455 "lexer.cpp"
        yy44:
            ++cursor;
            if (limit <= cursor) return true;
            yych = *cursor;
            switch (yych) {
                case '\\':	goto yy44;
                default:	goto yy15;
            }
        yy46:
            ++cursor;
            goto yy19;
        yy47:
            ++cursor;
            if (limit <= cursor) return true;
            yych = *cursor;
        yy48:
            switch (yych) {
                case '0':
                case '1':
                case '2':
                case '3':
                case '4':
                case '5':
                case '6':
                case '7':
                case '8':
                case '9':	goto yy47;
                case ':':	goto yy22;
                default:	goto yy49;
            }
        yy49:
            cursor = marker;
            goto yy19;
        yy50:
            yych = *++cursor;
            switch (yych) {
                case '0':
                case '1':
                case '2':
                case '3':
                case '4':
                case '5':
                case '6':
                case '7':
                case '8':
                case '9':
                case 'A':
                case 'B':
                case 'C':
                case 'D':
                case 'E':
                case 'F':
                case 'a':
                case 'b':
                case 'c':
                case 'd':
                case 'e':
                case 'f':	goto yy80;
                default:	goto yy49;
            }
        yy51:
            yych = *++cursor;
            switch (yych) {
                case '0':	goto yy83;
                case '1':
                case '2':
                case '3':
                case '4':
                case '5':
                case '6':
                case '7':
                case '8':
                case '9':	goto yy85;
                default:	goto yy49;
            }
        yy52:
            yych = *++cursor;
            switch (yych) {
                case '0':
                case '1':
                case '2':
                case '3':
                case '4':
                case '5':
                case '6':
                case '7':
                case '8':
                case '9':
                case 'A':
                case 'B':
                case 'C':
                case 'D':
                case 'E':
                case 'F':
                case 'G':
                case 'H':
                case 'I':
                case 'J':
                case 'K':
                case 'L':
                case 'M':
                case 'N':
                case 'O':
                case 'P':
                case 'Q':
                case 'R':
                case 'S':
                case 'T':
                case 'U':
                case 'V':
                case 'W':
                case 'X':
                case 'Y':
                case 'Z':
                case '_':
                case 'a':
                case 'b':
                case 'c':
                case 'd':
                case 'e':
                case 'f':
                case 'g':
                case 'h':
                case 'i':
                case 'j':
                case 'k':
                case 'l':
                case 'm':
                case 'n':
                case 'o':
                case 'p':
                case 'q':
                case 'r':
                case 's':
                case 't':
                case 'u':
                case 'v':
                case 'w':
                case 'x':
                case 'y':
                case 'z':	goto yy24;
                default:	goto yy53;
            }
        yy53:
#line 86 "lexer.re"
            {
                Token t(Token::Integer, lineno,
                        token_start + 1, cursor);
                t.set_int(-t.value_int());
                ts.push_token(t);
                token_start = cursor;
                continue;
            }
#line 609 "lexer.cpp"
        yy54:
            ++cursor;
            if (limit <= cursor) return true;
            yych = *cursor;
            switch (yych) {
                case '0':
                case '1':
                case '2':
                case '3':
                case '4':
                case '5':
                case '6':
                case '7':
                case '8':
                case '9':	goto yy54;
                case 'A':
                case 'B':
                case 'C':
                case 'D':
                case 'E':
                case 'F':
                case 'G':
                case 'H':
                case 'I':
                case 'J':
                case 'K':
                case 'L':
                case 'M':
                case 'N':
                case 'O':
                case 'P':
                case 'Q':
                case 'R':
                case 'S':
                case 'T':
                case 'U':
                case 'V':
                case 'W':
                case 'X':
                case 'Y':
                case 'Z':
                case '_':
                case 'a':
                case 'b':
                case 'c':
                case 'd':
                case 'e':
                case 'f':
                case 'g':
                case 'h':
                case 'i':
                case 'j':
                case 'k':
                case 'l':
                case 'm':
                case 'n':
                case 'o':
                case 'p':
                case 'q':
                case 'r':
                case 's':
                case 't':
                case 'u':
                case 'v':
                case 'w':
                case 'x':
                case 'y':
                case 'z':	goto yy24;
                default:	goto yy53;
            }
        yy56:
            yych = *++cursor;
            switch (yych) {
                case 'd':	goto yy87;
                default:	goto yy25;
            }
        yy57:
            yych = *++cursor;
            switch (yych) {
                case 'r':	goto yy89;
                default:	goto yy25;
            }
        yy58:
            yych = *++cursor;
            switch (yych) {
                case 'l':	goto yy90;
                case 'r':	goto yy91;
                default:	goto yy25;
            }
        yy59:
            yych = *++cursor;
            switch (yych) {
                case 'n':	goto yy92;
                default:	goto yy25;
            }
        yy60:
            yych = *++cursor;
            switch (yych) {
                case 'v':	goto yy93;
                default:	goto yy25;
            }
        yy61:
            yych = *++cursor;
            switch (yych) {
                case 'p':	goto yy95;
                default:	goto yy25;
            }
        yy62:
            yych = *++cursor;
            switch (yych) {
                case 'r':	goto yy97;
                default:	goto yy25;
            }
        yy63:
            yych = *++cursor;
            switch (yych) {
                case 'p':	goto yy98;
                default:	goto yy25;
            }
        yy64:
            yych = *++cursor;
            switch (yych) {
                case 'b':	goto yy100;
                default:	goto yy25;
            }
        yy65:
            yych = *++cursor;
            switch (yych) {
                case 'q':	goto yy101;
                case 's':	goto yy103;
                default:	goto yy25;
            }
        yy66:
            yych = *++cursor;
            switch (yych) {
                case 'r':	goto yy104;
                default:	goto yy25;
            }
        yy67:
            yych = *++cursor;
            switch (yych) {
                case 'b':	goto yy105;
                case 'd':	goto yy106;
                default:	goto yy25;
            }
        yy68:
            yych = *++cursor;
            switch (yych) {
                case 'l':	goto yy108;
                default:	goto yy25;
            }
        yy69:
            yych = *++cursor;
            switch (yych) {
                case 'j':	goto yy110;
                default:	goto yy25;
            }
        yy70:
            yych = *++cursor;
            switch (yych) {
                case 'p':	goto yy112;
                default:	goto yy25;
            }
        yy71:
            yych = *++cursor;
            switch (yych) {
                case 'i':	goto yy114;
                default:	goto yy25;
            }
        yy72:
            yych = *++cursor;
            switch (yych) {
                case 's':	goto yy115;
                default:	goto yy25;
            }
        yy73:
            yych = *++cursor;
            switch (yych) {
                case '0':
                case '1':
                case '2':
                case '3':
                case '4':
                case '5':
                case '6':
                case '7':
                case '8':
                case '9':
                case 'A':
                case 'B':
                case 'C':
                case 'D':
                case 'E':
                case 'F':
                case 'G':
                case 'H':
                case 'I':
                case 'J':
                case 'K':
                case 'L':
                case 'M':
                case 'N':
                case 'O':
                case 'P':
                case 'Q':
                case 'R':
                case 'S':
                case 'T':
                case 'U':
                case 'V':
                case 'W':
                case 'X':
                case 'Y':
                case 'Z':
                case '_':
                case 'a':
                case 'b':
                case 'c':
                case 'd':
                case 'e':
                case 'f':
                case 'g':
                case 'h':
                case 'i':
                case 'j':
                case 'k':
                case 'l':
                case 'm':
                case 'n':
                case 'o':
                case 'p':
                case 'q':
                case 'r':
                case 's':
                case 't':
                case 'u':
                case 'v':
                case 'w':
                case 'x':
                case 'y':
                case 'z':	goto yy24;
                default:	goto yy74;
            }
        yy74:
#line 79 "lexer.re"
            {
                ts.push_token (Token (Token::Integer, lineno,
                                      token_start + 1, cursor));
                token_start = cursor;
                
                continue;
            }
#line 862 "lexer.cpp"
        yy75:
            ++cursor;
            if (limit <= cursor) return true;
            yych = *cursor;
            switch (yych) {
                case '0':
                case '1':
                case '2':
                case '3':
                case '4':
                case '5':
                case '6':
                case '7':
                case '8':
                case '9':	goto yy75;
                case 'A':
                case 'B':
                case 'C':
                case 'D':
                case 'E':
                case 'F':
                case 'G':
                case 'H':
                case 'I':
                case 'J':
                case 'K':
                case 'L':
                case 'M':
                case 'N':
                case 'O':
                case 'P':
                case 'Q':
                case 'R':
                case 'S':
                case 'T':
                case 'U':
                case 'V':
                case 'W':
                case 'X':
                case 'Y':
                case 'Z':
                case '_':
                case 'a':
                case 'b':
                case 'c':
                case 'd':
                case 'e':
                case 'f':
                case 'g':
                case 'h':
                case 'i':
                case 'j':
                case 'k':
                case 'l':
                case 'm':
                case 'n':
                case 'o':
                case 'p':
                case 'q':
                case 'r':
                case 's':
                case 't':
                case 'u':
                case 'v':
                case 'w':
                case 'x':
                case 'y':
                case 'z':	goto yy24;
                default:	goto yy74;
            }
        yy77:
            yych = *++cursor;
            switch (yych) {
                case 'a':	goto yy116;
                case 't':	goto yy117;
                default:	goto yy25;
            }
        yy78:
            yych = *++cursor;
            switch (yych) {
                case 'r':	goto yy119;
                default:	goto yy25;
            }
        yy79:
            yych = *++cursor;
            switch (yych) {
                case 'b':	goto yy120;
                default:	goto yy25;
            }
        yy80:
            ++cursor;
            if (limit <= cursor) return true;
            yych = *cursor;
            switch (yych) {
                case '0':
                case '1':
                case '2':
                case '3':
                case '4':
                case '5':
                case '6':
                case '7':
                case '8':
                case '9':
                case 'A':
                case 'B':
                case 'C':
                case 'D':
                case 'E':
                case 'F':
                case 'a':
                case 'b':
                case 'c':
                case 'd':
                case 'e':
                case 'f':	goto yy80;
                default:	goto yy82;
            }
        yy82:
#line 95 "lexer.re"
            {
                ts.push_token (Token (Token::XInteger, lineno,
                                      token_start, cursor));
                token_start = cursor;
                
                continue;
            }
#line 990 "lexer.cpp"
        yy83:
            ++cursor;
        yy84:
#line 70 "lexer.re"
            {
                ts.push_token (Token (Token::FloatingPoint,
                                      lineno, token_start,
                                      cursor));
                token_start = cursor;
                
                continue;
            }
#line 1003 "lexer.cpp"
        yy85:
            ++cursor;
            if (limit <= cursor) return true;
            yych = *cursor;
            switch (yych) {
                case '0':
                case '1':
                case '2':
                case '3':
                case '4':
                case '5':
                case '6':
                case '7':
                case '8':
                case '9':	goto yy85;
                default:	goto yy84;
            }
        yy87:
            yych = *++cursor;
            switch (yych) {
                case '0':
                case '1':
                case '2':
                case '3':
                case '4':
                case '5':
                case '6':
                case '7':
                case '8':
                case '9':
                case 'A':
                case 'B':
                case 'C':
                case 'D':
                case 'E':
                case 'F':
                case 'G':
                case 'H':
                case 'I':
                case 'J':
                case 'K':
                case 'L':
                case 'M':
                case 'N':
                case 'O':
                case 'P':
                case 'Q':
                case 'R':
                case 'S':
                case 'T':
                case 'U':
                case 'V':
                case 'W':
                case 'X':
                case 'Y':
                case 'Z':
                case '_':
                case 'a':
                case 'b':
                case 'c':
                case 'd':
                case 'e':
                case 'f':
                case 'g':
                case 'h':
                case 'i':
                case 'j':
                case 'k':
                case 'l':
                case 'm':
                case 'n':
                case 'o':
                case 'p':
                case 'q':
                case 'r':
                case 's':
                case 't':
                case 'u':
                case 'v':
                case 'w':
                case 'x':
                case 'y':
                case 'z':	goto yy24;
                default:	goto yy88;
            }
        yy88:
#line 149 "lexer.re"
            {
                ts.push_token (Token (Token::Add, lineno));
                token_start = cursor;
                
                continue;
            }
#line 1097 "lexer.cpp"
        yy89:
            yych = *++cursor;
            switch (yych) {
                case 's':	goto yy122;
                default:	goto yy25;
            }
        yy90:
            yych = *++cursor;
            switch (yych) {
                case 'l':	goto yy124;
                default:	goto yy25;
            }
        yy91:
            yych = *++cursor;
            switch (yych) {
                case 'r':	goto yy126;
                default:	goto yy25;
            }
        yy92:
            yych = *++cursor;
            switch (yych) {
                case 's':	goto yy128;
                default:	goto yy25;
            }
        yy93:
            yych = *++cursor;
            switch (yych) {
                case '0':
                case '1':
                case '2':
                case '3':
                case '4':
                case '5':
                case '6':
                case '7':
                case '8':
                case '9':
                case 'A':
                case 'B':
                case 'C':
                case 'D':
                case 'E':
                case 'F':
                case 'G':
                case 'H':
                case 'I':
                case 'J':
                case 'K':
                case 'L':
                case 'M':
                case 'N':
                case 'O':
                case 'P':
                case 'Q':
                case 'R':
                case 'S':
                case 'T':
                case 'U':
                case 'V':
                case 'W':
                case 'X':
                case 'Y':
                case 'Z':
                case '_':
                case 'a':
                case 'b':
                case 'c':
                case 'd':
                case 'e':
                case 'f':
                case 'g':
                case 'h':
                case 'i':
                case 'j':
                case 'k':
                case 'l':
                case 'm':
                case 'n':
                case 'o':
                case 'p':
                case 'q':
                case 'r':
                case 's':
                case 't':
                case 'u':
                case 'v':
                case 'w':
                case 'x':
                case 'y':
                case 'z':	goto yy24;
                default:	goto yy94;
            }
        yy94:
#line 170 "lexer.re"
            {
                ts.push_token (Token (Token::Div, lineno));
                token_start = cursor;
                
                continue;
            }
#line 1198 "lexer.cpp"
        yy95:
            yych = *++cursor;
            switch (yych) {
                case '0':
                case '1':
                case '2':
                case '3':
                case '4':
                case '5':
                case '6':
                case '7':
                case '8':
                case '9':
                case 'A':
                case 'B':
                case 'C':
                case 'D':
                case 'E':
                case 'F':
                case 'G':
                case 'H':
                case 'I':
                case 'J':
                case 'K':
                case 'L':
                case 'M':
                case 'N':
                case 'O':
                case 'P':
                case 'Q':
                case 'R':
                case 'S':
                case 'T':
                case 'U':
                case 'V':
                case 'W':
                case 'X':
                case 'Y':
                case 'Z':
                case '_':
                case 'a':
                case 'b':
                case 'c':
                case 'd':
                case 'e':
                case 'f':
                case 'g':
                case 'h':
                case 'i':
                case 'j':
                case 'k':
                case 'l':
                case 'm':
                case 'n':
                case 'o':
                case 'p':
                case 'q':
                case 'r':
                case 's':
                case 't':
                case 'u':
                case 'v':
                case 'w':
                case 'x':
                case 'y':
                case 'z':	goto yy24;
                default:	goto yy96;
            }
        yy96:
#line 128 "lexer.re"
            {
                ts.push_token (Token (Token::Dup, lineno));
                token_start = cursor;
                
                continue;
            }
#line 1275 "lexer.cpp"
        yy97:
            yych = *++cursor;
            switch (yych) {
                case 'r':	goto yy129;
                default:	goto yy25;
            }
        yy98:
            yych = *++cursor;
            switch (yych) {
                case '0':
                case '1':
                case '2':
                case '3':
                case '4':
                case '5':
                case '6':
                case '7':
                case '8':
                case '9':
                case 'A':
                case 'B':
                case 'C':
                case 'D':
                case 'E':
                case 'F':
                case 'G':
                case 'H':
                case 'I':
                case 'J':
                case 'K':
                case 'L':
                case 'M':
                case 'N':
                case 'O':
                case 'P':
                case 'Q':
                case 'R':
                case 'S':
                case 'T':
                case 'U':
                case 'V':
                case 'W':
                case 'X':
                case 'Y':
                case 'Z':
                case '_':
                case 'a':
                case 'b':
                case 'c':
                case 'd':
                case 'e':
                case 'g':
                case 'h':
                case 'i':
                case 'j':
                case 'k':
                case 'l':
                case 'm':
                case 'n':
                case 'o':
                case 'p':
                case 'q':
                case 'r':
                case 's':
                case 'u':
                case 'v':
                case 'w':
                case 'x':
                case 'y':
                case 'z':	goto yy24;
                case 'f':	goto yy131;
                case 't':	goto yy133;
                default:	goto yy99;
            }
        yy99:
#line 198 "lexer.re"
            {
